--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,7 @@
         margin: 0%;
     }
     
-    @keyframes navbar {
+/*     @keyframes navbar {
         0% {
             border-image: -webkit-linear-gradient(left, #1abc9c, #3498db, #9b59b6) 1;
         }
@@ -27,7 +27,7 @@
         100% {
             border-image: -webkit-linear-gradient(left, #1abc9c, #3498db, #9b59b6) 1;
         }
-    }
+    } */
     
     @keyframes nvbk {
         0% {
